<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/salmon_800"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:src="@drawable/iniciar_sesion"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_inicio_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="username"
                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/language_user"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/material_dynamic_neutral_variant40" />

            <EditText
                android:id="@+id/edit_inicio_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="password"
                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/language_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/material_dynamic_neutral_variant40" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:background="@drawable/button_rounded"
                android:onClick="loginAcentral"
                android:text="@string/language_login" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/button_rounded_border"
                android:onClick="loginAregister"
                android:text="@string/language_to_register" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_margin="40dp"
                android:elevation="10dp"
                android:background="@drawable/button_social"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="60dp"
                android:layout_height="65dp"
                android:layout_margin="40dp"
                android:elevation="10dp"
                android:background="@drawable/button_social"
                android:contentDescription="@string/language_email"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/google" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>