<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/old_book_open"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="30"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:src="@drawable/acceso"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="70"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/userTxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="15"
                android:hint="@string/language_user"
                android:gravity="center"
                android:minHeight="48dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnSecondary"
                android:autofillHints="username"
                android:inputType="text" />

            <EditText
                android:id="@+id/correoTxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="15"
                android:gravity="center"
                android:hint="@string/language_email"
                android:minHeight="48dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnSecondary"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_txt_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="15"
                android:autofillHints="password"
                android:gravity="center"
                android:hint="@string/language_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnSecondary" />

            <EditText
                android:id="@+id/edit_txt_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="15"
                android:gravity="center"
                android:hint="@string/language_confirm_password"
                android:minHeight="48dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnSecondary"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:text="Accet termin and condicion" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="120dp"
                android:layout_marginVertical="15dp"
                android:elevation="10dp"
                android:layout_weight="10"
                android:background="@drawable/button_rounded"
                android:onClick="registroAlogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:text="@string/language_sign_in" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>